// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Label test on android renders VideoLabel with an explicit title 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <svg
    height={12}
    width={20.64}
  >
    <rect
      fill="#1D1D1B"
      height="13.5721404"
      width="15.4550103"
      x="0.154639175"
      y="0.139754386"
    />
    <polygon
      fill="#1D1D1B"
    />
    <polygon
      fill="#1D1D1B"
    />
  </svg>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#008347",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.2,
        "lineHeight": 12,
        "margin": 0,
        "marginLeft": 5,
        "padding": 0,
        "position": "relative",
        "top": 2,
      }
    }
  >
    S W I M M I N G
  </Text>
</View>
`;

exports[`Video Label test on android renders VideoLabel without an explicit title 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <svg
    height={12}
    width={20.64}
  >
    <rect
      fill="#1D1D1B"
      height="13.5721404"
      width="15.4550103"
      x="0.154639175"
      y="0.139754386"
    />
    <polygon
      fill="#1D1D1B"
    />
    <polygon
      fill="#1D1D1B"
    />
  </svg>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#008347",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.2,
        "lineHeight": 12,
        "margin": 0,
        "marginLeft": 5,
        "padding": 0,
        "position": "relative",
        "top": 2,
      }
    }
  >
    V I D E O
  </Text>
</View>
`;
